--- a/src/main/java/Vista/ListaProfesores.form
+++ b/src/main/java/Vista/ListaProfesores.form
@@ -59,18 +59,18 @@
               <Group type="102" alignment="0" attributes="0">
                   <EmptySpace min="-2" pref="95" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
-                      <Component id="jLabelSalon" min="-2" max="-2" attributes="0"/>
-                      <Component id="jComboBox1" min="-2" pref="125" max="-2" attributes="0"/>
+                      <Component id="jTextField2" min="-2" pref="125" max="-2" attributes="0"/>
+                      <Component id="jLabelCurso" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace min="-2" pref="70" max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="85" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Component id="jTextField1" min="-2" pref="125" max="-2" attributes="0"/>
                       <Component id="jLabelBimestre" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace min="-2" pref="68" max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="80" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
-                      <Component id="jLabelCurso" min="-2" max="-2" attributes="0"/>
-                      <Component id="jTextField2" min="-2" pref="125" max="-2" attributes="0"/>
+                      <Component id="jComboBox1" min="-2" pref="125" max="-2" attributes="0"/>
+                      <Component id="jLabelSalon" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace max="32767" attributes="0"/>
                   <Component id="jButtonBuscar" min="-2" pref="100" max="-2" attributes="0"/>
@@ -83,24 +83,17 @@
               <Group type="102" attributes="0">
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Group type="102" attributes="0">
-                          <Group type="103" groupAlignment="0" attributes="0">
-                              <Group type="102" attributes="0">
-                                  <EmptySpace min="-2" pref="21" max="-2" attributes="0"/>
-                                  <Component id="jLabelCurso" min="-2" max="-2" attributes="0"/>
-                              </Group>
-                              <Group type="102" alignment="1" attributes="0">
-                                  <EmptySpace max="-2" attributes="0"/>
-                                  <Group type="103" groupAlignment="3" attributes="0">
-                                      <Component id="jLabelSalon" alignment="3" min="-2" max="-2" attributes="0"/>
-                                      <Component id="jLabelBimestre" alignment="3" min="-2" max="-2" attributes="0"/>
-                                  </Group>
-                              </Group>
+                          <EmptySpace min="-2" pref="21" max="-2" attributes="0"/>
+                          <Group type="103" groupAlignment="3" attributes="0">
+                              <Component id="jLabelBimestre" alignment="3" min="-2" max="-2" attributes="0"/>
+                              <Component id="jLabelCurso" alignment="3" min="-2" max="-2" attributes="0"/>
+                              <Component id="jLabelSalon" alignment="3" min="-2" max="-2" attributes="0"/>
                           </Group>
                           <EmptySpace type="separate" max="-2" attributes="0"/>
-                          <Group type="103" groupAlignment="0" attributes="0">
-                              <Component id="jComboBox1" min="-2" max="-2" attributes="0"/>
-                              <Component id="jTextField1" alignment="0" min="-2" max="-2" attributes="0"/>
-                              <Component id="jTextField2" min="-2" max="-2" attributes="0"/>
+                          <Group type="103" groupAlignment="3" attributes="0">
+                              <Component id="jTextField1" alignment="3" min="-2" max="-2" attributes="0"/>
+                              <Component id="jComboBox1" alignment="3" min="-2" max="-2" attributes="0"/>
+                              <Component id="jTextField2" alignment="3" min="-2" max="-2" attributes="0"/>
                           </Group>
                       </Group>
                       <Group type="102" alignment="0" attributes="0">
@@ -122,7 +115,7 @@
             <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="db" green="ca" red="97" type="rgb"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="GRADO"/>
+            <Property name="text" type="java.lang.String" value="TIPO"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabelBimestre">
@@ -133,7 +126,7 @@
             <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="db" green="ca" red="97" type="rgb"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="SECCION"/>
+            <Property name="text" type="java.lang.String" value="CURSO"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabelCurso">
@@ -167,14 +160,10 @@
         <Component class="javax.swing.JComboBox" name="jComboBox1">
           <Properties>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-              <StringArray count="7">
+              <StringArray count="3">
                 <StringItem index="0" value=""/>
-                <StringItem index="1" value="1ro"/>
-                <StringItem index="2" value="2do"/>
-                <StringItem index="3" value="3ro"/>
-                <StringItem index="4" value="4to"/>
-                <StringItem index="5" value="5to"/>
-                <StringItem index="6" value="6to"/>
+                <StringItem index="1" value="ESTABLE"/>
+                <StringItem index="2" value="CONTRATADO"/>
               </StringArray>
             </Property>
           </Properties>
@@ -217,8 +206,8 @@
               <Table columnCount="4" rowCount="0">
                 <Column editable="false" title="APELLIDOS" type="java.lang.Object"/>
                 <Column editable="false" title="NOMBRES" type="java.lang.Object"/>
-                <Column editable="false" title="GRADO" type="java.lang.Object"/>
-                <Column editable="false" title="SECCI&#xd3;N" type="java.lang.Object"/>
+                <Column editable="false" title="CURSO" type="java.lang.Object"/>
+                <Column editable="false" title="TIPO" type="java.lang.Object"/>
               </Table>
             </Property>
             <Property name="gridColor" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
