--- a/src/main/java/Vista/Registro.form
+++ b/src/main/java/Vista/Registro.form
@@ -230,6 +230,9 @@
             </Property>
             <Property name="text" type="java.lang.String" value="PROFESOR"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButtonProfesorActionPerformed"/>
+          </Events>
           <AuxValues>
             <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="1"/>
           </AuxValues>
