--- a/src/main/java/Vista/PagosAdmin.form
+++ b/src/main/java/Vista/PagosAdmin.form
@@ -55,7 +55,7 @@
                               <Component id="jPanelMes9" min="-2" max="-2" attributes="0"/>
                           </Group>
                           <Group type="102" attributes="0">
-                              <Component id="jPanelMes" min="-2" max="-2" attributes="0"/>
+                              <Component id="jPanelEnero" min="-2" max="-2" attributes="0"/>
                               <EmptySpace min="-2" pref="74" max="-2" attributes="0"/>
                               <Component id="jPanelMes2" min="-2" max="-2" attributes="0"/>
                               <EmptySpace min="-2" pref="76" max="-2" attributes="0"/>
@@ -101,7 +101,7 @@
                       <Component id="jPanelMes6" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <Group type="102" alignment="1" attributes="0">
-                      <Component id="jPanelMes" min="-2" max="-2" attributes="0"/>
+                      <Component id="jPanelEnero" min="-2" max="-2" attributes="0"/>
                       <EmptySpace min="-2" pref="62" max="-2" attributes="0"/>
                       <Component id="jPanelMes5" min="-2" max="-2" attributes="0"/>
                   </Group>
@@ -211,7 +211,7 @@
         </Component>
       </SubComponents>
     </Container>
-    <Container class="javax.swing.JPanel" name="jPanelMes">
+    <Container class="javax.swing.JPanel" name="jPanelEnero">
       <Properties>
         <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
           <Color blue="81" green="44" red="0" type="rgb"/>
